# cgmes-explorer

./: .gitignore  README.md  main.py  pyproject.toml  query.rq  query_up.rq  requirements.txt
cgmes/: __init__.py  explorer.py
graphs/: __init__.py  nx.py
visu/: __init__.py  default.py  icons.py
visu/assets/: icons.yml
