[project]
name = "cgmes-explorer"
version = "0.1.0"
description = "Exploring CGMES files as graphs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.3.0",
    "dash-bootstrap-components>=2.0.4",
    "dash-cytoscape>=1.0.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "rdflib>=7.4.0",
]
